Finishing html for basic resume
Added an image and paragraphs

--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -6,10 +6,16 @@
 </head>
 
 <body>
+  <!--I built this myself-->
 
   <h1>Melinda Thompson</h1>
 
   <strong>Journalist</strong>
+
+  <br>
+
+  <img src=headshot.jpg width="300px">
+
 
 <!--Contact details -->
   <ul>
@@ -37,6 +43,7 @@
   <h3>Social Media and Outreach Coordinator</h3>
   <h4>YogiTerps</h4>
   <h5>Spring 2019-present</h5>
+  <p>Advertize and post on the YogiTerps social media pages. Plans events and coordinate with partnerships.</p>
 
   <h3>Runner</h3>
   <h4>Running Hare Vineyard</h4>
