--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <title>Melinda Thompson Resume</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
