update html to add css
Added stuff to css

--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -4,6 +4,8 @@
 <head>
   <title>Melinda Thompson Resume</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
