--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -10,8 +10,9 @@
 
 <body>
   <!--I built this myself-->
+  <div id="container">
 
-  <h1>Melinda Thompson</h1>
+  <div id="name">Melinda Thompson</div>
 
   <strong>Journalist</strong>
 
@@ -31,7 +32,7 @@
 <!--mission statement -->
   <p>I am a Maryland based feature journalist at the Washington Gardener. I write stories about gardening event going on in the DMV area. I have real world experience with interviewing and editing videos.</p>
 
-  <h2>Experience</h2>
+  <div class= "sectionheader">Experience</div>
 
   <h3>Reporter</h3>
   <h4>Washington Gardener</h4>
@@ -53,7 +54,7 @@
   <h5>Summer 2018-present</h5>
   <p>Ensure that wine bar, biergarten, and food venues are continuously stocked so service operations run smoothly</p>
 
-  <h2>Education</h2>
+  <div class= "sectionheader">Education</div>
 
   <ul>
     <li>Bachelor of Arts. Journalism, University of Maryland, 2023</li>
@@ -61,7 +62,7 @@
   </ul>
 
 
-  <h2>Skills</h2>
+  <div class= "sectionheader">Skills</div>
 
   <ul>
     <li>Video Editing with Adobe Premiere</li>
@@ -69,5 +70,6 @@
     <li>Social Media. Experienced with advertising a brand with Instagram and Twitter</li>
   </ul>
 
+</div>
 </body>
 </html>
