--- a/Resume/bootstrap_template.html
+++ b/Resume/bootstrap_template.html
@@ -17,6 +17,16 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
+    <style>
+
+      .bi {
+        font-size: 3em;
+      }
+
+      .row {
+        text-align: center;
+      }
+    </style>
   </head>
 
   <body>
@@ -95,16 +105,19 @@
         <div class="row">
 
           <div class="col-md-4">
+            <i class="bi bi-alarm"></i>
             <h3>Heading 1</h3>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           </div>
 
           <div class="col-md-4">
+            <i class="bi bi-snow2"></i>
             <h3>Heading 2</h3>
             <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
           </div>
 
           <div class="col-md-4">
+            <i class="bi bi-umbrella"></i>
             <h3>Heading 3</h3>
             <p>Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           </div>
@@ -113,7 +126,7 @@
 
       </div>
 
-    
+
 
   </body>
 
