--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -34,23 +34,23 @@
 
     <div class= "sectionheader">Experience</div>
 
-    <h3>Reporter</h3>
-    <h4>Washington Gardener</h4>
+    <div class="jobtitle">Reporter</div>
+    <div class="organization">Washington Gardener</div>
     <h5>Fall 2021-present</h5>
     <p>Write news stories on garden events; Read and write book reviews about garden subjects; Edit plant profile videos.</p>
 
-    <h3>Freelance Features Reporter</h3>
-    <h4>Greenbelt News Review</h4>
+    <div class="jobtitle">Freelance Features Reporter</div>
+    <div class="organization">Greenbelt News Review</div>
     <h5>Spring 2021<h5>
     <p>Wrote and published four stories about topics important to the Greenbelt community</p>
 
-    <h3>Social Media and Outreach Coordinator</h3>
-    <h4>YogiTerps</h4>
+    <div class="jobtitle">Social Media and Outreach Coordinator</div>
+    <div class="organization">YogiTerps</div>
     <h5>Spring 2019-present</h5>
     <p>Advertize and post on the YogiTerps social media pages. Plans events and coordinate with partnerships.</p>
 
-    <h3>Runner</h3>
-    <h4>Running Hare Vineyard</h4>
+    <div class="jobtitle">Runner</div>
+    <div class="organization">Running Hare Vineyard</div>
     <h5>Summer 2018-present</h5>
     <p>Ensure that wine bar, biergarten, and food venues are continuously stocked so service operations run smoothly</p>
 
