Worked on divs and css stylesheet
created some divs, classes, and ids for different elements and updated some designs

--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -14,7 +14,7 @@
 
     <div id="name">Melinda Thompson</div>
 
-    <strong>Journalist</strong>
+    <div id="title">Journalist</div>
 
     <br>
 
@@ -22,7 +22,7 @@
 
 
   <!--Contact details -->
-    <ul>
+    <ul class="menu">
       <li>methompson2000@gmail.com</li>
       <li>linkedin: https://www.linkedin.com/in/melinda-thompson-927726217/</li>
       <li>Twitter: https://twitter.com/MThompsonWrites</li>
@@ -30,33 +30,33 @@
     </ul>
 
   <!--mission statement -->
-    <p>I am a Maryland based feature journalist at the Washington Gardener. I write stories about gardening event going on in the DMV area. I have real world experience with interviewing and editing videos.</p>
+    <p class="top">I am a Maryland based feature journalist at the Washington Gardener. I write stories about gardening event going on in the DMV area. I have real world experience with interviewing and editing videos.</p>
 
     <div class= "sectionheader">Experience</div>
 
     <div class="jobtitle">Reporter</div>
     <div class="organization">Washington Gardener</div>
-    <h5>Fall 2021-present</h5>
-    <p>Write news stories on garden events; Read and write book reviews about garden subjects; Edit plant profile videos.</p>
+    <div class="date">Fall 2021-present</div>
+    <p class="description">Write news stories on garden events; Read and write book reviews about garden subjects; Edit plant profile videos.</p>
 
     <div class="jobtitle">Freelance Features Reporter</div>
     <div class="organization">Greenbelt News Review</div>
-    <h5>Spring 2021<h5>
-    <p>Wrote and published four stories about topics important to the Greenbelt community</p>
+    <div class="date">Spring 2021</div>
+    <p class="description">Wrote and published four stories about topics important to the Greenbelt community</p>
 
     <div class="jobtitle">Social Media and Outreach Coordinator</div>
     <div class="organization">YogiTerps</div>
-    <h5>Spring 2019-present</h5>
-    <p>Advertize and post on the YogiTerps social media pages. Plans events and coordinate with partnerships.</p>
+    <div class="date">Spring 2019-present</div>
+    <p class="description">Advertize and post on the YogiTerps social media pages. Plans events and coordinate with partnerships.</p>
 
     <div class="jobtitle">Runner</div>
     <div class="organization">Running Hare Vineyard</div>
-    <h5>Summer 2018-present</h5>
-    <p>Ensure that wine bar, biergarten, and food venues are continuously stocked so service operations run smoothly</p>
+    <div class="date">Summer 2018-present</div>
+    <p class="description">Ensure that wine bar, biergarten, and food venues are continuously stocked so service operations run smoothly</p>
 
     <div class= "sectionheader">Education</div>
 
-    <ul>
+    <ul id="degrees">
       <li>Bachelor of Arts. Journalism, University of Maryland, 2023</li>
       <li>High school diploma, Huntingtown High School, 2018</li>
     </ul>
@@ -64,7 +64,7 @@
 
     <div class= "sectionheader">Skills</div>
 
-    <ul>
+    <ul id="do">
       <li>Video Editing with Adobe Premiere</li>
       <li>Photo Editing with Adobe Photoshop</li>
       <li>Social Media. Experienced with advertising a brand with Instagram and Twitter</li>
