--- a/Resume/bootstrap_template.html
+++ b/Resume/bootstrap_template.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Bootstrap Template</title>
+    <title>Skate! Newsletter</title>
 
     <meta name="description" content="Merrill College of Journalism, UMD">
     <meta name="author" content="Adam Marton">
@@ -17,6 +17,10 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+
     <style>
 
       .bi {
@@ -26,14 +30,53 @@
       .row {
         text-align: center;
       }
+
+      .btn {
+        margin-top:25px;
+        font-family: 'Special Elite', cursive;
+      }
+
+      .col-md-6{
+        margin: auto;
+      }
+
+      .col-md-4{
+        margin: auto;
+      }
+
+      h1{
+        font-family: 'Special Elite', cursive;
+      }
+
+      h2{
+        font-family: 'Special Elite', cursive;
+      }
+
+      h3{
+        font-family: 'Special Elite', cursive;
+      }
+
+      .navbar-brand{
+        font-family: 'Special Elite', cursive;
+      }
+
+      .row{
+        padding-bottom: 50px;
+      }
+
+      @media screen and (max-width: 500px) {
+        h2{padding-top: 50px;}
+        .btn{background-color: teal !important;}
+      }
+
     </style>
   </head>
 
   <body>
      <!-- Navbar start-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Skate! Newsletter</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -44,35 +87,21 @@
 
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Current Issue</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">Past Issue</a>
             </li>
 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                Follow Us
               </a>
 
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
             </li
 
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1"    aria-disabled="true">Disabled</a>
-            </li>
           </ul>
-
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
@@ -80,21 +109,21 @@
     <!-- Navbar end-->
     <!-- Hero start-->
 
-   <div class="px-4 py-5 my-5 text-center">
-
-     <h1 class="display-5 fw-bold">Centered hero</h1>
-
-     <div class="col-lg-6 mx-auto">
-       <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world's most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-
-       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-         <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-         <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-       </div>
-
-     </div>
-
-   </div>
+  <div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="https://images.unsplash.com/photo-1564982752979-3f7bc974d29a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold lh-1 mb-3">A rundown of top new skateboard decks</h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
    <!-- Hero end-->
 
@@ -104,22 +133,40 @@
 
         <div class="row">
 
-          <div class="col-md-4">
-            <i class="bi bi-alarm"></i>
-            <h3>Heading 1</h3>
+          <div class="col-md-6">
+            <h2>Lorem ipsum dolor</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <img src="https://images.unsplash.com/photo-1572776685600-aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80" width="100% max-width="500px">
+            <button type="button" class="btn btn-dark">Dark</button>
           </div>
 
-          <div class="col-md-4">
-            <i class="bi bi-snow2"></i>
-            <h3>Heading 2</h3>
+          <div class="col-md-6">
+            <h2>Lorem ipsum dolor</h2>
             <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
+            <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" width="100%" max-width="500px">
+            <button type="button" class="btn btn-dark">Dark</button>
+          </div>
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-md-4">
+            <i class="bi bi-newspaper"></i>
+            <h3>Read</h3>
+            <p>Read our archives</p>
           </div>
 
           <div class="col-md-4">
-            <i class="bi bi-umbrella"></i>
-            <h3>Heading 3</h3>
-            <p>Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <i class="bi bi-chat-square-dots-fill"></i>
+            <h3>Contact</h3>
+            <p>Ask a question</p>
+          </div>
+
+          <div class="col-md-4">
+            <i class="bi bi-hand-thumbs-up-fill"></i>
+            <h3>Follow</h3>
+            <p>Follow our socials</p>
           </div>
 
         </div>
@@ -127,6 +174,16 @@
       </div>
 
 
+
+      <footer class="footer mt-auto py-3 bg-dark">
+
+        <div class="container">
+
+          <span class="text-muted">This is a bootstrap exercise</span>
+
+        </div>
+
+      </footer>
 
   </body>
 
