--- a/ThompsonLayout/index.html
+++ b/ThompsonLayout/index.html
@@ -37,6 +37,8 @@
         </div>
       </div>
 
+      <div class="captions">Ms. al-Amiri, right, and Omran Sharaf, the Hope project manager, during a 2015 ceremony in Dubai to unveil the mission<p class="location"> New York Times</p><div>
+
       <!--content begins here -->
       <div id="content">
 
@@ -50,7 +52,8 @@
 
         <p>Just 33 years old, she is the head of science operations and the deputy project manager for a space probe that the U.A.E. is about to send to Mars.</p>
 
-        <img scr="uae-mars1.jpg" alt="headshot of Abu Dhabi, the head of science operations and the deputy project manager for U.A.E space probe">
+        <img src="images/uae-mars1.jpg" alt="headshot of Abu Dhabi, the head of science operations and the deputy project manager for U.A.E space probe">
+          <div class="captions">Sarah al-Amiri is the head of science operations and the deputy project manager for the Emirates Mars Mission, the U.A.E.’s first space mission. <p class="location"> New York Times</p></div>
 
         <p>A rocket lifting a spacecraft called Hope has begun its journey to Mars. The launch will be the boldest move yet by a country that is looking to establish a future that will long outlive its oil wealth, and sees a space program as one way to accomplish that goal.</p>
 
@@ -62,7 +65,10 @@
 
         <p>Because the U.A.E. does not yet have its own rocket industry, it bought the launch for Hope aboard an H-IIA rocket from Mitsubishi Heavy Industries, a machinery maker in Japan. Because of bad weather at the launchpad on an island in Japan, liftoff was delayed a number of times to Sunday, July 19, or Monday local time.</p>
 
-        <p>About the size of a Mini Cooper car, Hopeis to arrive in orbit around Mars in February. The spacecraft — which cost about $200 million to build and launch — will carry three instruments: an infrared spectrometer, an ultraviolet spectrometer and a camera.</p>
+        <img src="images/hope-spacecraft-graphic.gif" alt=" “The Hope Spacecraft”">
+          <div class="captions">The United Arab Emirates’ first Mars mission aims to investigate the Martian atmosphere. The orbiter’s giant solar panel wings will deploy in space after launch. <p class="location">By Eleanor Lutz | Source: Mohammed Bin Rashid Space Center</p></div>
+
+        <p>About the size of a Mini Cooper car, Hope is to arrive in orbit around Mars in February. The spacecraft — which cost about $200 million to build and launch — will carry three instruments: an infrared spectrometer, an ultraviolet spectrometer and a camera.</p>
 
         <p>From its high orbit — varying from 12,400 miles to 27,000 miles above the surface — Hope will give planetary scientists their first global view of Martian weather at all times of day. Over its two-year mission, it will investigate how dust storms and other weather phenomena near the Martian surface speed or slow the loss of the planet’s atmosphere into space.</p>
 
@@ -75,6 +81,8 @@
         <p>“It’s about starting getting the ball rolling,” Mr. Sharaf said, “and creating that disruptive change, and changing the mind-set.”</p>
 
         <p>The Emirates previously built and launched three earth-observing satellites, collaborating with a South Korean manufacturer and gradually taking on greater shares of the engineering. The country even has a nascent human spaceflight program. Last year, the U.A.E. bought a seat on a Russian Soyuz rocket and sent its first astronaut, Hazzaa al-Mansoori, for an eight-day stay at the International Space Station.</p>
+
+        <blockquote>The science piece of the mission was an even bigger gap to fill for a country without Mars scientists, which until recently constituted an unfathomable career choice.</blockquote>
 
         <p>For the Mars mission, the country took a similar approach to the earlier satellites by working with the Laboratory for Atmospheric and Space Physics at the University of Colorado Boulder, where Hope was built before being sent to Dubai for testing.</p>
 
@@ -98,6 +106,9 @@
 
         <p>Once construction of the spacecraft was complete in Colorado, a large Ukrainian transport plane ferried it to Dubai, where it was to undergo a round of testing before heading to the launchpad in Japan.</p>
 
+        <img src="images/uae-mars3.jpg" alt="a photo of engineers working in space">
+          <div class="captions">Engineers at work on the Hope spacecraft<p>New York Times</p></div>
+
         <p>But at the end of February — not long before the European Space Agency and Russia postponed the launch of the Rosalind Franklin mission in part because of the logistical hurdles created by the pandemic — Mr. Sharaf and Ms. al-Amiri realized the outbreak could disrupt their carefully planned schedules if airports were shut down.</p>
 
         <p>“Based on that, we started working on a plan to get the team across to Japan as soon as possible,” Ms. al-Amiri said.</p>
@@ -116,8 +127,8 @@
 
         <p>“For the Emirates, it’s more about the journey,” Mr. Sharaf said. “It’s more about the impact. Reaching there is one of the goals. But that doesn’t mean that the mission has failed, if we didn’t manage to get there. So failure is an option.”</p>
 
+    <!--adding the additional links-->
 
-        TEXT FOR CAPTIONS AND GRAPHICS:
 
       </div>
 
