--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--sets title and gives some basic metadata-->
-    <title>Midterm Review</title>
+    <title>Melinda Thompson's Midterm</title>
 
     <meta name="description" content="Merrill College of Journalism, UMD">
     <meta name="author" content="Melinda Thompson">
@@ -32,12 +32,15 @@
 
       <div id="content">
 
-        <div class="hero-image">
-          <div class="hero-text">
-            <h1>Megan Rapinoe: Her battlecry for change</h1>
+        <section class="bgimage">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h1>Megan Rapinoe: The battle cry for change</h1>
+              </div>
+            </div>
           </div>
-        </div>
-
+        </section>
 
         <div id="author">By Jenny Vrentas</div>
 
