--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -2,9 +2,38 @@
 
 <html lang="en">
 <head>
+
   <title>Melinda Thompson Resume</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+
+  <!--link to google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
+
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!--sets title and gives some basic metadata-->
+  <title>Melinda Thompson's Midterm</title>
+
+  <meta name="description" content="Merrill College of Journalism, UMD">
+  <meta name="author" content="Melinda Thompson">
+
+  <!-- Bootstrap CSS and JavaScript -->
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+
 
 </head>
 
@@ -12,13 +41,26 @@
   <!--I built this myself-->
   <div id="container">
 
-    <div id="name">Melinda Thompson</div>
 
-    <div id="title">Journalist</div>
+    <section class="bgimage">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div id="name">Melinda Thompson</div>
+              <div id="title">Journalist</div>
+            </div>
+          </div>
+        </div>
+      </section>
+
 
     <br>
 
     <img src=headshot.jpg width="300px">
+
+  <!--contact information and mission statement with left-aligned photo-->
+
+    
 
 
   <!--Contact details -->
