--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -56,23 +56,24 @@
 
     <br>
 
-    <img src=headshot.jpg width="300px">
 
-  <!--contact information and mission statement with left-aligned photo-->
+    <!--contact information and mission statement with left-aligned photo-->
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="headshot.jpg" class="d-block mx-lg-auto img-fluid" alt="Melinda Thompson Headshot" width="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <p class="top">I am a Maryland based feature journalist at the Washington Gardener. I write stories about gardening event going on in the DMV area. I have real world experience with interviewing and editing videos.</p>
+          <p class="contact-info"><a href="mailto:methompson2000@gmail.com">Email</a></p>
+          <p class="contact-info"><a href="https://www.linkedin.com/in/melinda-thompson-927726217/" target=_blank>LinkedIn</a></p>
+          <p class="contact-info"><a href="https://twitter.com/MThompsonWrites" target=_blank>Twitter</a></p>
+          <p class="contact-info"><a href="https://github.com/methompson2000 target=_blank">GitHub</a></p>
+        </div>
+      </div>
+    </div>
 
-    
 
-
-  <!--Contact details -->
-    <ul class="menu">
-      <li>methompson2000@gmail.com</li>
-      <li>linkedin: https://www.linkedin.com/in/melinda-thompson-927726217/</li>
-      <li>Twitter: https://twitter.com/MThompsonWrites</li>
-      <li>GitHub: https://github.com/methompson2000</li>
-    </ul>
-
-  <!--mission statement -->
-    <p class="top">I am a Maryland based feature journalist at the Washington Gardener. I write stories about gardening event going on in the DMV area. I have real world experience with interviewing and editing videos.</p>
 
     <div class= "sectionheader">Experience</div>
 
