--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -39,7 +39,7 @@
 
 <body>
   <!--I built this myself-->
-  <div id="container">
+  <div id="content">
 
 
     <section class="bgimage">
@@ -76,6 +76,33 @@
 
 
     <div class= "sectionheader">Experience</div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="circle">
+            <div class="circle__inner">
+              <div class="circle__wrapper">
+                <div class="circle__content">Reporter</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="circle">
+            <div class="circle__inner">
+              <div class="circle__wrapper">
+                <div class="circle__content">Reporter</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
 
     <div class="jobtitle">Reporter</div>
     <div class="organization">Washington Gardener</div>
