--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -78,12 +78,15 @@
     <div class= "sectionheader">Experience</div>
 
     <div class="container">
+
+  <!--for the first two experinece-->
       <div class="row">
         <div class="col-md-6">
           <div class="circle">
             <div class="circle__inner">
               <div class="circle__wrapper">
                 <div class="circle__content">Reporter</div>
+                <div class="circle_date">Fall 2021</div>
               </div>
             </div>
           </div>
@@ -93,7 +96,7 @@
           <div class="circle">
             <div class="circle__inner">
               <div class="circle__wrapper">
-                <div class="circle__content">Reporter</div>
+                <div class="circle__content">Freelance Features Reporter</div>
               </div>
             </div>
           </div>
@@ -107,7 +110,7 @@
     <div class="jobtitle">Reporter</div>
     <div class="organization">Washington Gardener</div>
     <div class="date">Fall 2021-present</div>
-    <p class="description">Write news stories on garden events; Read and write book reviews about garden subjects; Edit plant profile videos.</p>
+    <p class="description">Write news stories on garden events; Read and write book reviews about garden subjects; Film and edit plant profile videos.</p>
 
     <div class="jobtitle">Freelance Features Reporter</div>
     <div class="organization">Greenbelt News Review</div>
@@ -126,6 +129,22 @@
 
     <div class= "sectionheader">Education</div>
 
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-lg-6">
+          <img src="image/melinda_camera.JPG" alt="Melinda Thompson taking a video with a camera" width="300px">
+        </div>
+        <div class="col-lg-6">
+          <div class="p-5 mt-4">
+            <ul id="degrees">
+              <li>Bachelor of Arts. Journalism, University of Maryland, 2023</li>
+              <li>High school diploma, Huntingtown High School, 2018</li>
+            </ul>
+
+        </div>
+    </div>
+
+
     <ul id="degrees">
       <li>Bachelor of Arts. Journalism, University of Maryland, 2023</li>
       <li>High school diploma, Huntingtown High School, 2018</li>
@@ -134,11 +153,20 @@
 
     <div class= "sectionheader">Skills</div>
 
-    <ul id="do">
-      <li>Video Editing with Adobe Premiere</li>
-      <li>Photo Editing with Adobe Photoshop</li>
-      <li>Social Media. Experienced with advertising a brand with Instagram and Twitter</li>
-    </ul>
+<!--image right with box text for skills-->
+
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="image/melinda_sign.jpg" class="d-block mx-lg-auto img-fluid" alt="Melinda Thompson Headshot" width="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <p class="do">Video Editing with Adobe Premiere</p><br><br>
+          <p class="do">Photo Editing with Adobe Photoshop</p><br><br>
+          <p class="do">Social Media: experienced with advertising a brand with Instagram and Twitter</p>
+      </div>
+    </div>
+
 
   </div>
 </body>
