--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -79,14 +79,17 @@
 
     <div class="container">
 
-  <!--for the first two experinece-->
+  <!--for the first two experinece circles-->
       <div class="row">
         <div class="col-md-6">
           <div class="circle">
             <div class="circle__inner">
               <div class="circle__wrapper">
-                <div class="circle__content">Reporter</div>
-                <div class="circle_date">Fall 2021</div>
+                <div class="circle__content">Reporter
+                  <br>
+                  <br>
+                  <p class="date">Fall 2021-present</p>
+                </div>
               </div>
             </div>
           </div>
@@ -96,7 +99,56 @@
           <div class="circle">
             <div class="circle__inner">
               <div class="circle__wrapper">
-                <div class="circle__content">Freelance Features Reporter</div>
+                <div class="circle__content">Freelance Features Reporter
+                  <br>
+                  <br>
+                  <p class="date">Spring 2021</p
+                ></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--Info underneath circles-->
+      <div class="row">
+        <div class="col-md-6">
+          <div class="job-info"><strong>Washington Gardener</strong>
+            <p class="job-description">Write news stories on garden events; Read and write book reviews about garden subjects; Film and edit plant profile videos.</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="job-info"><strong>Greenbelt News Review</strong>
+            <p class="job-descrption">Wrote and published four stories about topics important to the Greenbelt community</p>
+          </div>
+        </div>
+      </div>
+
+<!--for the second two circle sections-->
+      <div class="row">
+        <div class="col-md-6">
+          <div class="circle">
+            <div class="circle__inner">
+              <div class="circle__wrapper">
+                <div class="circle__content">Social Media Coordinator
+                  <br>
+                  <br>
+                  <p class="date">Spring 2019-present</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="circle">
+            <div class="circle__inner">
+              <div class="circle__wrapper">
+                <div class="circle__content">Runner
+                  <br>
+                  <br>
+                  <p class="date">Summer 2018-present</p
+                ></div>
               </div>
             </div>
           </div>
@@ -127,7 +179,11 @@
     <div class="date">Summer 2018-present</div>
     <p class="description">Ensure that wine bar, biergarten, and food venues are continuously stocked so service operations run smoothly</p>
 
+
+
     <div class= "sectionheader">Education</div>
+
+    <!--image left with box text for education-->
 
     <div class="container my-5">
       <div class="row">
@@ -136,20 +192,10 @@
         </div>
         <div class="col-lg-6">
           <div class="p-5 mt-4">
-            <ul id="degrees">
-              <li>Bachelor of Arts. Journalism, University of Maryland, 2023</li>
-              <li>High school diploma, Huntingtown High School, 2018</li>
-            </ul>
-
+              <p class="degrees">Bachelor of Arts. Journalism, University of Maryland, 2023</p><br><br>
+              <p class="degrees">High school diploma, Huntingtown High School, 2018</p>
         </div>
     </div>
-
-
-    <ul id="degrees">
-      <li>Bachelor of Arts. Journalism, University of Maryland, 2023</li>
-      <li>High school diploma, Huntingtown High School, 2018</li>
-    </ul>
-
 
     <div class= "sectionheader">Skills</div>
 
