finished melinda_resume.html
finished the experience section

--- a/Resume/melinda_resume.html
+++ b/Resume/melinda_resume.html
@@ -114,12 +114,12 @@
       <div class="row">
         <div class="col-md-6">
           <div class="job-info"><strong>Washington Gardener</strong>
-            <p class="job-description">Write news stories on garden events; Read and write book reviews about garden subjects; Film and edit plant profile videos.</p>
+            <p class="work">Write news stories on garden events; Read and write book reviews about garden subjects; Film and edit plant profile videos.</p>
           </div>
         </div>
         <div class="col-md-6">
           <div class="job-info"><strong>Greenbelt News Review</strong>
-            <p class="job-descrption">Wrote and published four stories about topics important to the Greenbelt community</p>
+            <p class="work">Wrote and published four stories about topics important to the Greenbelt community</p>
           </div>
         </div>
       </div>
@@ -155,30 +155,21 @@
         </div>
       </div>
 
+      <!--Info underneath circles-->
+      <div class="row">
+        <div class="col-md-6">
+          <div class="job-info"><strong>Yogi Terps</strong>
+            <p class="work">Advertize and post on the YogiTerps social media pages. Plans events and coordinate with partnerships.</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="job-info"><strong>Running Hare Vineyard</strong>
+            <p class="work">Ensure that wine bar, biergarten, and food venues are continuously stocked so service operations run smoothly.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
-
-
-
-    <div class="jobtitle">Reporter</div>
-    <div class="organization">Washington Gardener</div>
-    <div class="date">Fall 2021-present</div>
-    <p class="description">Write news stories on garden events; Read and write book reviews about garden subjects; Film and edit plant profile videos.</p>
-
-    <div class="jobtitle">Freelance Features Reporter</div>
-    <div class="organization">Greenbelt News Review</div>
-    <div class="date">Spring 2021</div>
-    <p class="description">Wrote and published four stories about topics important to the Greenbelt community</p>
-
-    <div class="jobtitle">Social Media and Outreach Coordinator</div>
-    <div class="organization">YogiTerps</div>
-    <div class="date">Spring 2019-present</div>
-    <p class="description">Advertize and post on the YogiTerps social media pages. Plans events and coordinate with partnerships.</p>
-
-    <div class="jobtitle">Runner</div>
-    <div class="organization">Running Hare Vineyard</div>
-    <div class="date">Summer 2018-present</div>
-    <p class="description">Ensure that wine bar, biergarten, and food venues are continuously stocked so service operations run smoothly</p>
-
 
 
     <div class= "sectionheader">Education</div>
@@ -212,8 +203,8 @@
           <p class="do">Social Media: experienced with advertising a brand with Instagram and Twitter</p>
       </div>
     </div>
-
-
   </div>
+
+  
 </body>
 </html>
