--- a/climate-crisis-story/html-frame/index.html
+++ b/climate-crisis-story/html-frame/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Bootstrap Template</title>
+  <title>Climate Crisis Story</title>
   <meta name="description" content="Merrill College of Journalism, UMD">
   <meta name="author" content="Melinda Thompson">
 
@@ -36,9 +36,9 @@
 
 <!--splash-->
 <div class="hero-container">
-<img src="html-frame\images\intersection.jpg" class="hero-image">
+<img src="images\intersection.jpg" class="hero-image">
   <div class="overlay">
-      <div class="hero-head"> Heat & Inequality
+      <div class="hero-head"> <span class="heat">Heating</span> Up Inequality
         <div class="hero-sub">In Baltimore, the burden of rising temperatures isn't shared
         </div>
       </div>
