--- a/climate-crisis-story/html-frame/index.html
+++ b/climate-crisis-story/html-frame/index.html
@@ -48,11 +48,9 @@
 
   <div class="container">
 
-    <p class="headline">The Headline Goes Here</p>
+    <p class="byline">IAN ROUND, JAZMIN CONNER, JERMAINE ROWLEY AND SANDY BANISKY</p>
 
-    <p class="byline">By Byline</p>
-
-    <p class="chapter"> Chapter Headline</p>
+    <p class="chapter">In urban heat islands, climate crisis hits harder</p>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
