--- a/climate-crisis-story/html-frame/index.html
+++ b/climate-crisis-story/html-frame/index.html
@@ -55,19 +55,46 @@
 
     <p class="chapter">In urban heat islands, climate crisis hits harder</p>
 
+    <!--sidebar-->
+    <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Clients</a>
+      <a href="#">Contact</a>
+    </div>
+
+    <div id="main">
+      <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>
+      <h2>Collapsed Sidebar</h2>
+      <p>Click on the hamburger menu/bar icon to open the sidebar, and push this content to the right.</p>
+    </div>
+
     <p>Heat radiates from the asphalt and concrete that cover the streets, the sidewalks, the alleys, even the tiny yards behind the homes in the East Baltimore neighborhood of McElderry Park. Trees are scarce. And air doesn’t move much when it comes up against block after block of rowhouses.</p>
 
     <p>So as a dangerous 11-day heat wave tormented the city in July, the hottest month ever recorded on the planet, fewer and fewer residents were going outside.</p>
 
     <p>“Can’t even put your head out the door,” said Tammy Jackson, 48, on a day when the temperature outside hit 100 degrees Fahrenheit and 92 degrees in her home. “This is too much. Oh Lord, this is too much.”</p>
 
-    <p>But it is going to get worse. In McElderry Park and around the world, in communities rich and poor, downtown and in the suburbs, weather disasters loom. And experts are using language ever more dire.</p>
+    <p>But it is going to get worse. In McElderry Park and around the world, in communities rich and poor, downtown and in the suburbs, weather disasters loom. And experts are using language ever more dire.</p><br>
+
+    <iframe title="Indoor and outdoor heat index during Baltimore heat wave, July 16-22, 2019" aria-label="Interactive line chart" id="datawrapper-chart-064tX" src="https://datawrapper.dwcdn.net/064tX/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+    </script>
+
+    <br><br>
 
     <p>“The single greatest threat from climate change to people in cities is extreme heat,” said Jad Daley, president and CEO of American Forests, a nonprofit organization dedicated to preserving forests and planting trees.</p>
 
     <p>In July, Anchorage, Alaska, recorded 90 degrees for the first time. Europe suffered through record temperatures, with Paris hitting 109. The heat moved across Scandinavia and into Greenland, where scientists said it speeded the melting of Arctic ice that would increase flooding in coastal cities — including Baltimore.</p>
 
     <p>Average annual temperatures in Baltimore have gone up more than 3 degrees over the last century, nearly twice as much as the rest of the country.</p>
+
+    <!-- pullquote-->
+    <div class="quote">
+      "When we talk about the environment,” Lewis said, “we’re talking about human health.”
+      <p class="quote-attribution"> -Del. Robbyn Lewis- East Baltimore Delagate
+    </div>
+
 
     <p>And the planet’s warming has gained momentum, say researchers who estimate the number of very hot days in Baltimore could increase six-fold by the middle of the century.</p>
 
@@ -85,8 +112,6 @@
 
     <p>McElderry Park, which despite its lyrical name offers little green space, is one of these: the hottest neighborhood in Baltimore, a city whose climate has long been classified as humid subtropical.</p>
 
-
-
     <p>Residents in the hottest areas have higher rates of chronic illnesses affected by heat, including asthma and COPD. In hot weather, emergency medical calls for some chronic conditions increase. The rate of emergency medical calls for cardiac arrest and congestive heart failure, for example, nearly double when the heat index hits 103 degrees.</p>
 
     <p>"When we talk about the environment,” Lewis said, “we’re talking about human health.”</p>
@@ -98,6 +123,9 @@
     <p>In short, as the planet warms, the urban poor in dozens of large U.S. cities will actually experience more heat than the wealthy, simply by virtue of where they live.</p>
 
     <p>Sacoby Wilson, who studies applied environmental health as an associate professor at the University of Maryland School of Public Health, said people in low-income neighborhoods walk more, ride more buses and drive fewer cars — so they contribute less to climate change. And yet they are more vulnerable to dying in extreme heat.</p>
+
+    <iframe title="The relationship between summer temperature and poverty in Baltimore" aria-label="chart" id="datawrapper-chart-W7uPt" src="https://datawrapper.dwcdn.net/W7uPt/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+    </script>
 
     <p>“Environmental justice and climate change,” Wilson said, “are inextricably linked.”</p>
 
@@ -112,8 +140,6 @@
     <p>As July’s weather emergency bore down, Baltimore’s health department put out press releases advising citizens to drink water and cut back on outdoor activities. At a Thursday press conference warning of a 100-degree weekend, the mayor told Baltimoreans to stay inside until the weather broke Monday night.</p>
 
     <p>Radio and television stations dutifully broadcast that the city opened cooling centers, where people could rest during the most intense heat. City health officials said the information was also available on its website.</p>
-
-<!--add a graphic here-->
 
     <p>But many East Baltimoreans said during the heat wave that they weren’t aware of any of City Hall’s plans or warnings. Many said they didn’t know cooling centers existed. They never looked at the website.</p>
 
@@ -165,6 +191,11 @@
 
     <p>Tammy Jackson, who has asthma, said she had to stop cooking dinner one July evening when the heat made it hard for her to breathe. The next day, she told her husband, “Baby, I can’t cook until I get AC.”</p>
 
+    <iframe title="Projected number of extreme heat events in Maryland for the year 2040" aria-label="Map" id="datawrapper-chart-qyCWF" src="https://datawrapper.dwcdn.net/qyCWF/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="404"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+    </script>
+
+    <br>
+
     <p>Even if someone from McElderry Park decided to find a cooling center, some centers were closed on the weekend. The closest center open Saturday and Sunday was about a mile away — a long walk for the young or the old in 100-degree heat.</p>
 
     <p>Jennifer Martin, Baltimore's deputy health commissioner for population health and disease prevention, said she was “sad and surprised” to hear so many people were unaware of the cooling centers.</p>
@@ -181,6 +212,9 @@
 
     <p>Twenty people have died of heat-related illnesses in Maryland so far this year, three of them in Baltimore, according to state data through Aug. 28.</p>
 
+    <iframe title="Baltimore has more than its share of heat-related deaths in Maryland" aria-label="Grouped Bars" id="datawrapper-chart-Ep7XE" src="https://datawrapper.dwcdn.net/Ep7XE/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="527"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+    </script>
+
     <p>From July 16 through July 22, when the heat wave broke, 47 people went to emergency rooms when the heat aggravated chronic conditions such as heart disease, diabetes or lung problems.</p>
 
     <p>Yet it could have been worse. Heat catastrophes are not theoretical. In Chicago in 1995, more than 700 people died during a five-day heat wave.</p>
@@ -196,6 +230,13 @@
     <p>Peter Beilenson, Baltimore’s health commissioner from 1992 to 2005, now the health services director of Sacramento County, California, said health departments could use different strategies to deal with extreme heat.</p>
 
     <p>Public health workers could be redirected during heat waves to knock on doors of people who are most vulnerable to heat, he said. That would allow workers to hand out information on cooling centers and give them a chance to assess whether the resident needs to go to the emergency room.</p>
+
+    <!-- pullquote-->
+    <div class="quote">
+        “I don’t like to rank things,” said Scott, the City Council president. “For me, when you’re thinking about issues like heat, that’s connected to safety. It’s all interconnected. We need to stop thinking in silos.”
+      <p class="quote-attribution"> -Brandon M. Scott-Baltimore City Council President
+    </div>
+
 
     <p>The Baltimore health department has done this to deal with other problems, Beilenson said — for example, to check on tuberculosis patients or alert residents to the dangers of lead paint.</p>
 
@@ -261,6 +302,9 @@
 
     <p>“Accept it,” he said.</p>
 
+    <img src="images\SoniaHug_StreetView.jpg">
+      <p class="caption">Photo by Sonia Hug | Wide Angle Youth Media</p>
+
     <p class="credits"> Jake Gluck, Jane Gerard, Roxanne Ready, Theresa Diffendal and Sean Mussenden of the University of Maryland contributed to this story. Additional information was also provided by Sean McMinn, Meg Anderson and Nora Eckert of NPR.</p>
 
   </div>
@@ -269,9 +313,7 @@
 <!--Footer-->
   <footer>
 
-    <p>Footer Text</p>
-
-    <p>Copywrite 2021 Capital News Service</p>
+    <p class="footer">Copywrite 2021 Capital News Service</p>
 
   </footer>
 
