Update climate crisis
tried to do a sidebar, i don't think it's right, but i'm done

--- a/climate-crisis-story/html-frame/index.html
+++ b/climate-crisis-story/html-frame/index.html
@@ -51,24 +51,45 @@
 
   <div class="container">
 
+    <!--sidebar-->
+    <div class="wrapper">
+
+        <nav id="sidebar">
+          <div class="sidebar-header">
+            <h3>State of the Climate 2018</h3>
+          </div>
+        </nav>
+
+        <ul class="list-unstyled-components">
+          <p>The American Meteorological Society releases a State of the Climate report each summer summarizing data collected by global environmental monitoring stations around the world. In 2018, here were five key findings.</p>
+          <li class="active">
+            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">State of the Climate 2018</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                  <li>2018 was the fourth warmest year, behind only 2016, 2015 and 2017. Since the start of the 21st Century, every year has been hotter than the global average temperature recorded from 1981 to 2010.</li>
+
+                  <li>Glaciers have continued to melt for the 30th year in a row. In 2018, approximately one meter of ice melted off the top of the average glacier.</li>
+
+                  <li>Sea levels rose for the seventh year in a row. The annual mean sea level is the highest it’s been in 26 years.</li>
+
+                  <li>The global average carbon dioxide concentration at Earth’s surface is the highest ever recorded according to data that goes back 800,000 years. Carbon dioxide, methane and nitrous oxide released in the atmosphere continue to increase.</li>
+
+                  <li>Arctic air temperatures rose at twice the rate of the rest of the Earth with the five past years’ Arctic temperatures surpassing records since 1900.</li>
+
+          </li>
+
+          <p>Source: American Meteorological Society's The State of the Climate in 2018</p>
+
+        </ul>
+
+        <!--page content-->
+        <div id="content">
+        </div>
+
+    </div>
+
     <p class="byline">IAN ROUND, JAZMIN CONNER, JERMAINE ROWLEY AND SANDY BANISKY</p>
 
     <p class="chapter">In urban heat islands, climate crisis hits harder</p>
-
-    <!--sidebar-->
-    <div id="mySidebar" class="sidebar">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
-    </div>
-
-    <div id="main">
-      <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>
-      <h2>Collapsed Sidebar</h2>
-      <p>Click on the hamburger menu/bar icon to open the sidebar, and push this content to the right.</p>
-    </div>
 
     <p>Heat radiates from the asphalt and concrete that cover the streets, the sidewalks, the alleys, even the tiny yards behind the homes in the East Baltimore neighborhood of McElderry Park. Trees are scarce. And air doesn’t move much when it comes up against block after block of rowhouses.</p>
 
