--- a/web-design-workshop/site-build-module/climate-crisis-build-start/index.html
+++ b/web-design-workshop/site-build-module/climate-crisis-build-start/index.html
@@ -20,7 +20,7 @@
 
 		<!--Top Hat-->
 		<nav class="navbar navbar-expand-lg navbar-light bg-dark">
-			<span class="nav-logo"><span class="red">Code Red</span class="extra">Baltimore's Climate Divide</span>
+			<span class="nav-logo"><span class="red">Code Red</span>Baltimore's Climate Divide</span>
 		</nav>
 
 		<!--splash-->
