--- a/final/index.html
+++ b/final/index.html
@@ -81,6 +81,22 @@
 
       <p>Experts say Biles, who is tied for the Olympic record for most medals won by an American gymnast, will transcend the sport, pushing for mental health and wellness, and ushering it past the last remnants of its darkest period — the Larry Nassar scandal.</p>
 
+</div>
+<!--end container so that I can add a bootstrap grid with my graphs-->
+
+<div class="row">
+  <div class="col-md-6">
+    <iframe title="Medals won in the 2016 Olympic gymnastic team" aria-label="Grouped Bars" id="datawrapper-chart-7lP6s" src="https://datawrapper.dwcdn.net/7lP6s/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="713"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+  </div>
+
+  <div class="col-md-6">
+    <iframe title="Medals won in the 2020 Olympic gymnastic team" aria-label="Grouped Bars" id="datawrapper-chart-YbdgZ" src="https://datawrapper.dwcdn.net/YbdgZ/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="543"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+  </div>
+
+<div class="container">
+
       <p>Nassar, the USA Gymnastics team’s former doctor, was accused of sexually assaulting more than 120 girls. He pleaded guilty to sexually abusing 10 minors in Michigan court in 2018 and is serving up to 175 years in prison.</p>
 
       <p>Biles, who said she is a survivor of Nassar’s abuse, has spoken out in the past about how it affected her, and said that her Olympics performance was “probably” affected by it.</p>
@@ -157,21 +173,6 @@
     </div>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-<!--The columns-->
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-      </div>
-    </div>
 
     <br><br><br>
 
