--- a/final/index.html
+++ b/final/index.html
@@ -26,6 +26,18 @@
 </head>
 <body>
 
+<!-- page topper-->
+  <section class="bgimage">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h1>Simone Biles' impact: It's not just gymnastics</h1>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <!--nav bar bootstrap-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -141,7 +153,8 @@
 
       <p>Olympic gymnast Jordan Chiles, who nearly quit the sport before starting her training there in 2018, was Biles’ last-minute replacement this year, helping Team USA win a silver medal.</p>
 
-      <!--add map of gyms here-->
+      <!--added map-->
+      <iframe title="Top Gymnastic Gyms" aria-label="Locator maps" id="datawrapper-chart-65ucr" src="https://datawrapper.dwcdn.net/65ucr/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="532"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
 
       <p>“I lived in a world where everything [was] strict, strict, strict,” Chiles told NBC Sports in May. “They’ve (World Champions) given me so much encouragement. I didn’t get that too much in the past.”</p>
 
@@ -160,21 +173,6 @@
       <p>Neat reiterated that Biles’ impact will eventually surpass her accomplishments and steering the next generation of athletes.</p>
 
       <p>“Her role isn’t going to be just coaching in the gym, but leading a cultural shift of protecting the wellness of athletes and coaches. Her biggest role coming out of the Olympic Games is helping to shift the culture. That’s her legacy. She is the person to do it. She is the individual that understands it better than anybody.”</p>
-
-<!--Image and Caption-->
-    <div class="image">
-
-      <img src="robert-pattinson-meme.jpeg" alt="Robert Pattinson with his hair slicked back standing in a kitchen">
-
-      <p>Robert Pattinson meme in the kitchen.</p>
-
-      <p class="source">The Tab</p>
-
-    </div>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    <br><br><br>
 
   </div>
 
