--- a/final/index.html
+++ b/final/index.html
@@ -79,11 +79,8 @@
 
   <div class="container">
 
-    <p class="headline">The Headline Goes Here</p>
 
     <p class="byline">By Deon J. Hampton</p>
-
-    <p class="chapter"> Chapter Headline</p>
 
       <p>Simone Biles walked away from the Tokyo Olympics with her head unbowed and her illustrious gymnastic career cemented.</p>
 
@@ -98,22 +95,37 @@
 
 <div class="row">
   <div class="col-md-6">
-    <iframe title="Medals won in the 2016 Olympic gymnastic team" aria-label="Grouped Bars" id="datawrapper-chart-7lP6s" src="https://datawrapper.dwcdn.net/7lP6s/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="713"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-</script>
+    <iframe title="Medals won in the 2016 Olympic gymnastic team" aria-label="Stacked Bars" id="datawrapper-chart-7lP6s" src="https://datawrapper.dwcdn.net/7lP6s/7/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="307"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+    </script>
   </div>
 
   <div class="col-md-6">
-    <iframe title="Medals won in the 2020 Olympic gymnastic team" aria-label="Grouped Bars" id="datawrapper-chart-YbdgZ" src="https://datawrapper.dwcdn.net/YbdgZ/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="543"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-</script>
+    <iframe title="Medals won in the 2020 Olympic gymnastic team" aria-label="Stacked Bars" id="datawrapper-chart-YbdgZ" src="https://datawrapper.dwcdn.net/YbdgZ/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="259"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+    </script>
   </div>
 
-<div class="container">
+  <div class="container">
 
       <p>Nassar, the USA Gymnastics team’s former doctor, was accused of sexually assaulting more than 120 girls. He pleaded guilty to sexually abusing 10 minors in Michigan court in 2018 and is serving up to 175 years in prison.</p>
 
-      <p>Biles, who said she is a survivor of Nassar’s abuse, has spoken out in the past about how it affected her, and said that her Olympics performance was “probably” affected by it.</p>
+  </div>
+  <!--ended div so that I could put text next to a photo-->
 
-      <p>She now has the opportunity to continue speaking out against sexual assault and promoting any other social banners she chooses to carry.</p>
+      <div class="row">
+        <div class="col-md-6">
+          <p>Biles, who said she is a survivor of Nassar’s abuse, has spoken out in the past about how it affected her, and said that her Olympics performance was “probably” affected by it.</p>
+
+          <p>She now has the opportunity to continue speaking out against sexual assault and promoting any other social banners she chooses to carry.</p>
+        </div>
+
+        <div class="col-md-6">
+          <img src="images/simone_testify.jpg">
+          <p class="caption"><a href="https://www.latimes.com/sports/story/2021-09-15/simone-biles-other-gymnasts-criticize-fbis-handling-of-larry-nassar-case-at-hearing"> Saul Loeb</a> | Associated Press</p>
+        </div>
+
+  <div class="container">
+
+
 
       <p>“I would say Simone’s legacy is actually far greater reaching than medal count, and her beginning to help facilitate the change of culture in our sport,” said Bob Neat, director of communications for the National Gymnastics Association.</p>
 
