--- a/final/index.html
+++ b/final/index.html
@@ -14,6 +14,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -107,23 +109,23 @@
 
   <div class="container">
 
-      <p>Nassar, the USA Gymnastics team’s former doctor, was accused of sexually assaulting more than 120 girls. He pleaded guilty to sexually abusing 10 minors in Michigan court in 2018 and is serving up to 175 years in prison.</p>
+    <p>Nassar, the USA Gymnastics team’s former doctor, was accused of sexually assaulting more than 120 girls. He pleaded guilty to sexually abusing 10 minors in Michigan court in 2018 and is serving up to 175 years in prison.</p>
 
-  </div>
-  <!--ended div so that I could put text next to a photo-->
 
-      <div class="row">
-        <div class="col-md-6">
-          <p>Biles, who said she is a survivor of Nassar’s abuse, has spoken out in the past about how it affected her, and said that her Olympics performance was “probably” affected by it.</p>
+<!--text to the right and picture to the left-->
+    <div class="row">
+      <div class="col-md-6">
+        <p>Biles, who said she is a survivor of Nassar’s abuse, has spoken out in the past about how it affected her, and said that her Olympics performance was “probably” affected by it.</p>
 
-          <p>She now has the opportunity to continue speaking out against sexual assault and promoting any other social banners she chooses to carry.</p>
-        </div>
+        <p>She now has the opportunity to continue speaking out against sexual assault and promoting any other social banners she chooses to carry.</p>
+      </div>
 
-        <div class="col-md-6">
+      <div class="col-md-6">
+        <div class="image">
           <img src="images/simone_testify.jpg" alt="Simone Biles testifying at Larry Nassar's trial">
           <p class="caption"><a href="https://www.latimes.com/sports/story/2021-09-15/simone-biles-other-gymnasts-criticize-fbis-handling-of-larry-nassar-case-at-hearing"> Saul Loeb</a> | Associated Press</p>
         </div>
-
+      </div>
 
 <!--restart the div container-->
   <div class="container">
@@ -138,6 +140,8 @@
 
       <p>She cited the mental and emotional toll of competing in the Games as reasons for backing out.</p>
 
+      <!--add pullquote-->
+
       <p>"Physically, I feel good. I'm in shape," she told Hoda Kotb on NBC's "TODAY" show following her exit. "Emotionally, it varies on the time and moment. Coming to the Olympics and being head star isn't an easy feat."</p>
 
       <p>Her decision drew harsh criticism from many who said she had quit on her team, and praise from mental health supporters who backed Biles, the most decorated gymnast in history, for knowing when to take time for herself.</p>
@@ -147,6 +151,20 @@
       <p>It’s “like the weight of the world on your shoulders," she said. It’s a "little bit too heavy to carry," but it helps to take a step back and focus on her mental health, she said.</p>
 
       <p>At the time, the Olympian said she was dealing with the “twisties,” a phenomenon that can cause potential injury when gymnasts lose their sense of space and dimension midair — even if they have performed the same maneuver for years without problems.</p>
+
+      <!--add photo and video of twisties-->
+      <div class="row">
+        <div class="col-md-6">
+          <img src="images/simone-twisties.jpg" alt="Graphic of a play-by-play of the twisties">
+          <p class="caption"><a href="https://www.health.com/condition/mental-health-conditions/simone-biles-twisties-gymnastics"> Getty Images</a></p>
+        </div>
+          <iframe width="420" height="315"
+          src="https://www.youtube.com/watch?v=nO-vMUApyJQ">
+          </iframe>
+        <div class="col-md-6">
+
+        </div>
+
 
       <p>Derrin Moore, founder of the Atlanta-based advocacy group Brown Girls Do Gymnastics, said Biles’ legacy will forever be tied to her decision in Tokyo.</p>
 
