--- a/final/index.html
+++ b/final/index.html
@@ -174,6 +174,8 @@
 
       <p>Biles’ influence on the sport will likely grow through World Champions Centre, the Houston-area training facility her parents founded, where she will most likely mold the next wave of world-class gymnasts.</p>
 
+      <!--add full size picture of Simone-->
+
       <p>“Simone was one of the first people to open up a gym and coach the kids the way she wanted to be coached. Simone was always talented, but she always wanted to do more,” said Ashley Umberger, a 2001 USA national team gymnastics member.</p>
 
       <p>Biles can lean on her experience to train future Olympic gymnasts, she said.</p>
